--- a/styles.css
+++ b/styles.css
@@ -847,20 +847,27 @@
     grid-template-rows: 1fr;
   }
 
-  .tools_card {
+  
+  .tools_card_html {
     margin: 10px;
-    height: 500px;
+    height: 150px;
     width: 375px;
     border-radius: 4px;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    color: #fff;
-    background-image: linear-gradient(to right, #0f0c29, #302b63, #24243e);
-    transition: 0.3s ease-in;
+    color: rgb(0, 0, 0);
+    background-image: url(/logos/html5.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 125px 125px;
+    align-items: center;
+    
+   
   }
 
-  .tools_card {
+
+  .tools_card_css {
     margin: 10px;
     height: 150px;
     width: 375px;
@@ -869,9 +876,114 @@
     flex-direction: column;
     justify-content: center;
     color: #fff;
-    background-image: linear-gradient(to right, #0f0c29, #302b63, #24243e);
-    transition: 0.3s ease-in;
+    background-image: url(/logos/csslogo.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 200px 150px;
+    align-items: center;
   }
+    
+    .tools_card_js {
+      margin: 10px;
+      height: 150px;
+      width: 375px;
+      border-radius: 4px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      color: #fff;
+      background-image: url(/logos/javascript.png);
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: 225px 125px;
+      align-items: center;
+    }
+
+    .tools_card_react {
+      margin: 10px;
+      height: 150px;
+      width: 375px;
+      border-radius: 4px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      color: #fff;
+      background-image: url(logos/react.png);
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: 150px 125px;
+      align-items: center;
+    }
+
+    .tools_card_node {
+      margin: 10px;
+      height: 150px;
+      width: 375px;
+      border-radius: 4px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      color: #fff;
+      background-image: url(/logos/nodeJs.png);
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: 200px 125px;
+      align-items: center;
+    }
+
+    .tools_card_mongo {
+      margin: 10px;
+      height: 150px;
+      width: 375px;
+      border-radius: 4px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      color: #fff;
+      background-image: url(/logos/mongologo.png);
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: 200px 125px;
+      align-items: center;
+    }
+
+    .tools_card_git {
+      margin: 10px;
+      height: 150px;
+      width: 375px;
+      border-radius: 4px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      color: #fff;
+      background-image: url(/logos/gitlogo.png);
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: 175px 125px;
+      align-items: center;
+    }
+
+    .tools_card_php {
+      margin: 10px;
+      height: 150px;
+      width: 375px;
+      border-radius: 4px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      color: #fff;
+      background-image: url(/logos/php.png);
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: 150px 115px;
+      align-items: center;
+    }
+  
+  
+  
+  
+  
+  
 
 
   
