--- a/styles.css
+++ b/styles.css
@@ -205,7 +205,7 @@
   /* hero section */
   .hero {
     background: #000000;
-    background: linear-gradient(to right, #161616, #000000);
+    background: linear-gradient(#000000,#131313);
     padding: 200px 0;
   }
 
@@ -840,44 +840,119 @@
     grid-template-columns: 426px 426px;
     text-align: center;
     margin-top: '-=80px'
-    grid-gap: 10px 10px;
   }
 
   .grid-item-frontend {
-    background-color: rgba(255,255,0.8, green, blue, alpha);
-    border: 1px solid white;  
-    padding: 55px;
-    font-size: 30px;
-    text-align: center;
+    border: 1px solid white;
+    font-size: 24px;
+    color: white;  
   }
 
   .grid-item-backend {
-    border: 1px solid white
+    border: 1px solid white;
+    font-size: 24px;
+    color: white; 
   }
 
   .grid-item-frontend-info {
-    border: 1px solid red;
+    border: 1px solid white;
+    display: inline-flex;    
   }
 
   .grid-item-backend-info {
-    border: 1px solid red;
+    border: 1px solid white;
+    display: inline-flex;
   }
 
   .grid-item-other {
     border: 1px solid white;
+    font-size: 24px;
+    color: white; 
   }
 
   .grid-item-other-info {
-    border: 1px solid red;
+    border: 1px solid white;
+    display: inline-flex;
+  }
+  
+  .html_img {
+    max-width: 35%;
+    max-height: 35%;
+    margin: 5px;
+  }
+
+  .css_img {
+    max-width: 35%;
+    max-height: 35%;
+    margin: 5px;
   }
   
 
+  .javascript_img {
+    max-width: 35%;
+    max-height: 35%;
+    margin: 5px;
+  }
   
+  .react_img {
+    max-width: 35%;
+    max-height: 35%;
+    margin: 5px;
+  }
   
-  
-  
-  
+  .bootstrap_img {
+    max-width: 35%;
+    max-height: 35%;
+    margin: 5px;
+  }
 
+  .php_img {
+    max-width: 35%;
+    max-height: 35%;
+    margin: 5px;
+  }
+
+  .node_img {
+    max-width: 35%;
+    max-height: 35%;
+    margin: 5px;
+  }
+  
+  .mongodb_img {
+    max-width: 35%;
+    max-height: 35%;
+    margin: 5px;
+  }
+  
+  .heroku_img {
+    max-width: 35%;
+    max-height: 35%;
+    margin: 5px;
+  }
+
+  .github_img {
+    max-width: 35%;
+    max-height: 35%;
+    margin: 5px;
+  }
+
+  .popOs_img {
+    max-width: 35%;
+    max-height: 35%;
+    margin: 5px;
+  }
+
+  .vsCode_img {
+    max-width: 35%;
+    max-height: 35%;
+    margin: 5px;
+  }
+
+  .premiere_img {
+    max-width: 35%;
+    max-height: 35%;
+    margin: 5px;
+  }
 
 /*   
 
