--- a/styles.css
+++ b/styles.css
@@ -507,8 +507,8 @@
     -webkit-background-clip: text;
     -moz-background-clip: text;
     -webkit-text-fill-color: transparent;
-    margin-bottom: 5rem;
-    font-size: 2.5rem;
+    margin-bottom: 0.5rem;
+    font-size: 3rem;
   }
 
   .projects__wrapper {
@@ -837,120 +837,114 @@
   
   .tools_section {
     display: grid;
-    grid-template-columns: 426px 426px;
+    grid-template-columns: 426px 426px 426px;
     text-align: center;
     margin-top: '-=80px'
   }
 
-  .grid-item-frontend {
-    border: 1px solid white;
-    font-size: 24px;
-    color: white;  
-  }
-
-  .grid-item-backend {
-    border: 1px solid white;
-    font-size: 24px;
-    color: white; 
-  }
-
   .grid-item-frontend-info {
+    margin: 15px;
     border: 1px solid white;
-    display: inline-flex;    
+    border-radius: 5px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;    
   }
 
   .grid-item-backend-info {
+    margin: 15px;
     border: 1px solid white;
-    display: inline-flex;
-  }
-
-  .grid-item-other {
-    border: 1px solid white;
-    font-size: 24px;
-    color: white; 
+    border-radius: 5px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
   }
 
   .grid-item-other-info {
+    margin: 15px;
     border: 1px solid white;
-    display: inline-flex;
+    border-radius: 5px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
   }
   
   .html_img {
     max-width: 35%;
-    max-height: 35%;
+    max-height: 30%;
     margin: 5px;
   }
 
   .css_img {
     max-width: 35%;
-    max-height: 35%;
+    max-height: 30%;
     margin: 5px;
   }
   
 
   .javascript_img {
     max-width: 35%;
-    max-height: 35%;
+    max-height: 30%;
     margin: 5px;
   }
   
   .react_img {
     max-width: 35%;
-    max-height: 35%;
+    max-height: 30%;
     margin: 5px;
   }
   
   .bootstrap_img {
-    max-width: 35%;
-    max-height: 35%;
+    max-width: 40%;
+    max-height: 30%;
     margin: 5px;
   }
 
   .php_img {
-    max-width: 35%;
-    max-height: 35%;
+    max-width: 30%;
+    max-height: 30%;
     margin: 5px;
   }
 
   .node_img {
-    max-width: 35%;
-    max-height: 35%;
+    max-width: 30%;
+    max-height: 30%;
     margin: 5px;
   }
   
   .mongodb_img {
-    max-width: 35%;
-    max-height: 35%;
+    max-width: 30%;
+    max-height: 30%;
     margin: 5px;
   }
   
   .heroku_img {
-    max-width: 35%;
-    max-height: 35%;
+    max-width: 30%;
+    max-height: 30%;
     margin: 5px;
   }
 
   .github_img {
-    max-width: 35%;
-    max-height: 35%;
+    max-width: 30%;
+    max-height: 30%;
     margin: 5px;
   }
 
   .popOs_img {
-    max-width: 35%;
-    max-height: 35%;
+    max-width: 30%;
+    max-height: 30%;
     margin: 5px;
   }
 
   .vsCode_img {
-    max-width: 35%;
-    max-height: 35%;
-    margin: 5px;
+    max-width: 30%;
+    max-height: 30%;
+    margin: 5px;0
   }
 
   .premiere_img {
-    max-width: 35%;
-    max-height: 35%;
+    max-width: 30%;
+    max-height: 30%;
     margin: 5px;
   }
 
