Added Pomodoro page text - (todo_adjustcssonhero)

--- a/projects/project_styles.css
+++ b/projects/project_styles.css
@@ -818,3 +818,14 @@
       width: 100px;
     }
   }
+
+  .pomodoro_h1 {
+    text-align: center;
+    align-items: center;
+    position: relative;
+    top: 75px;
+  }
+
+  .body {
+    background-color: #000000;
+  }
