--- a/projects/project_styles.css
+++ b/projects/project_styles.css
@@ -199,7 +199,7 @@
   /* hero section */
   .hero {
     background: #000000;
-    background: linear-gradient(to right, #161616, #000000);
+    background: linear-gradient(#000000,#131313);
     padding: 200px 0;
   }
 
